<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ChatActivity">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/footer_input"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout"
        app:layout_constraintVertical_bias="0.0" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="413dp"
        android:layout_height="96dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/manage_chats_title"
            android:layout_width="247dp"
            android:layout_height="50dp"
            android:gravity="center"
            android:layout_marginStart="60dp"
            android:layout_marginTop="24dp"
            android:layout_toEndOf="@+id/chevron_left"
            android:text="@string/community_group"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/active_10m_ago"
            android:layout_width="163dp"
            android:layout_height="27dp"
            android:layout_marginStart="90dp"
            android:layout_marginTop="46dp"
            android:layout_toEndOf="@id/chevron_left"
            android:text="@string/active_10m_ago"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/chevron_left"
            android:layout_width="15dp"
            android:layout_height="21dp"
            android:layout_marginStart="30dp"
            android:contentDescription="@string/chevron_left_thin"
            android:src="@drawable/chevron_left_thin"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.51" />

        <ImageView
            android:id="@+id/reportButton"
            android:layout_width="50dp"
            android:layout_height="40dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:src="@drawable/flag"
            android:contentDescription="Flag User"
            android:layout_marginHorizontal="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <RelativeLayout
        android:id="@+id/footer_input"
        android:layout_width="413dp"
        android:layout_height="100dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">


        <EditText
            android:id="@+id/messageInput"
            android:gravity="start"
            android:layout_width="290dp"
            android:layout_height="wrap_content"
            android:minHeight="60dp"
            android:background="@color/textbox_grey"
            android:layout_alignParentTop="true"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="17dp"
            android:layout_marginTop="17dp"
            android:layout_marginStart="12dp"
            android:autofillHints="message"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:fontFamily="Inter"
            android:hint="@string/message_placeholder"
            android:inputType="textMultiLine"
            android:maxLines="50"
            android:overScrollMode="always"
            android:scrollbars="vertical"
            android:textSize="14sp" />

        <ImageView
            android:id="@+id/sendMessageButton"
            android:layout_width="40dp"
            android:layout_height="63dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:contentDescription="@string/send_message"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="48dp"
            android:layout_marginBottom="26dp"
            app:srcCompat="@drawable/send" />

    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>