<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal"
    android:background="@drawable/gradient_background">

    <ImageView
        android:id="@+id/ivLogo"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:src="@drawable/trailblazers_logo"
        android:layout_weight="1"/>

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:gravity="center_vertical"
        android:layout_weight="2"
        android:text="Trailblazers"
        android:textColor="#FFFFFF"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/profile"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="@drawable/baseline_person_24"/>
</LinearLayout>